==> carlsuttle/BLE_Server/server3/lib/QMI8658/QMI8658.cpp <==
#include "QMI8658.h"
#define QMI8658_SLAVE_ADDR_L 0x6a
#define QMI8658_SLAVE_ADDR_H 0x6b
#define QMI8658_printf printf
#define QMI8658_UINT_MG_DPS

void DEV_I2C_Write_Byte(uint8_t addr, uint8_t reg, uint8_t Value)
{
	Wire.beginTransmission(addr);
	Wire.write(reg);
	Wire.write(Value);
	Wire.endTransmission();
}

void DEV_I2C_Read_nByte(uint8_t addr, uint8_t reg, uint8_t* pData, uint32_t Len)
{
	Wire.beginTransmission(addr);
	Wire.write(reg);
	Wire.endTransmission();

	Wire.requestFrom(addr, Len);

	uint8_t i = 0;
	for (i = 0; i < Len; i++) {
		pData[i] = Wire.read();
	}
	Wire.endTransmission();
}
